Changelog for AutoPatch
=======================

Version 1.0.1
-------------
- All development (bug tracking, feature requests, CVS, mailing lists)
  are hosted on sourceforge now, not just the releases. Check it out:
  http://autopatch.sourceforge.net
  
- Added support for Microsoft SQL Server dialect.
  Support for Microsoft SQL Server should be considered beta
  and some features may depend on specific JDBC drivers to
  work. The free MS-SQL JDBC driver may have issues.
  Basic DDL patches appear to work.
  https://sourceforge.net/support/tracker.php?aid=1658440
  Thank you Shirish Kulkarni
  
- Added support for Sybase dialect
  Support for Sybase should be considered beta at the moment.
  It has not received a great deal of testing yet.
  https://sourceforge.net/support/tracker.php?aid=1662010
  Thank you Alex Soto
  
- List of unapplied patches displayed prior to patching
  https://sourceforge.net/support/tracker.php?aid=1658446
  

Version 1.0.0
-------------
Versions prior to 1.0.0 did not maintain a changelog.