@@ -257,6 +257,13 @@ logging and fatal errors propoaged to the adapter that started AutoPatch,
 as this is a very serious problem and would prevent the correct execution 
 of the application, and urgent troubleshooting will usually be required.
 
+Note that it is possible, by setting the "ReadOnly" property, to get AutoPatch
+to go through each complete patch phase except for the actual application,
+so that you can see what would happen if you applied patches. If the level
+isn't correct it will throw an exception when it is read-only. So you can enforce
+that the patch level is correct, but not automatically patch, useful in
+production configurations.
+
 
 --------------------------------------------------------------------------
 
@@ -298,6 +305,10 @@ web.xml file:
     <context-param>
         <param-name>migration.systemname</param-name>
 		<param-value>beekeeper</param-value>
+    </context-param>
+    <context-param>
+        <param-name>migration.readonly</param-name>
+		<param-value>false</param-value>
     </context-param>
     <context-param>
         <param-name>migration.databasetype</param-name>
