@@ -89,6 +89,11 @@ public class MigrationProcess
     private MigrationBroadcaster broadcaster = new MigrationBroadcaster();
     
     /**
+     * Whether we actually want to apply patches, or just look
+     */
+    private boolean readOnly = false;
+    
+    /**
      * Creates a new <code>Migration</code> instance.
      */
     public MigrationProcess()
@@ -198,6 +203,15 @@ public class MigrationProcess
             log.info("System up-to-date.  No patch tasks will execute.");
         }
         
+
+        
+        // See if we should execute
+        if (isReadOnly())
+        {
+            log.info("In read-only mode - skipping patch application");
+            return 0;
+        }
+        
         // Now apply them
         taskCount = 0;
         for (Iterator i = migrations.iterator(); i.hasNext();)
@@ -251,6 +265,18 @@ public class MigrationProcess
                          "'");
         }
         log.info("A total of " + taskCount + " post-patch tasks will execute.");
+        
+        // See if we should execute
+        if (isReadOnly())
+        {
+            if (taskCount > 0)
+            {
+                throw new MigrationException("Unapplied patches exist, but read-only flag is set");
+            }
+            
+            log.info("In read-only mode - skipping patch application");
+            return 0;
+        }
         
         // Now execute them
         taskCount = 0;
@@ -481,5 +507,25 @@ public class MigrationProcess
             
             usedOrderNumbers.put(level, task);
         }
+    }
+
+    /**
+     * See if we are actually applying patches, or if it is just readonly
+     * 
+     * @return boolean true if we will skip application
+     */
+    public boolean isReadOnly()
+    {
+        return readOnly;
+    }
+
+    /**
+     * Set whether or not to actually apply patches
+     * 
+     * @param readOnly boolean true if we should skip application
+     */
+    public void setReadOnly(boolean readOnly)
+    {
+        this.readOnly = readOnly;
     }
 }
